Bug 571281.  Make list-style-position:inside + display:list-item + non-visible overflow work again.  r=roc